# Collaborative-Dual-Elevator-System-over-SPI-IPC

./: CMakeLists.txt  FINALP~1.PDS  README.md  STM32F401xE.s
Adc/: Adc.c  Adc.h  Adc_Private.h
Common/: BIT_OP~1.H  Bit_Math.h  Std_Types.h  Utils.h
Dispatcher/: DISPAT~1.C  DISPAT~1.H
EXTI/: Exti.c  Exti.h  Exti_Private.h
GPIO/: Gpio.c  Gpio.h  Gpio_Private.h
IPC/: Ipc.c  Ipc.h
NVIC/: Nvic.c  Nvic.h
PWM/: Pwm.c
RCC/: Rcc.c  Rcc.h  Rcc_Private.h
SPI/: Spi.c  Spi.h  Spi_Private.h
StateMachine/: STATE_~1.C  STATE_~1.H
Timers/: Timer.c  Timer.h
UART/: Uart.c  Uart.h  Uart_Private.h
config/: BOARD_~1.H
